# pyangus

./: .gitignore  LICENSE  Pipfile  README.md  main.py  pyproject.toml  requirements.txt
docs/: index.html  pyangus.html  search.js
pyangus/: __init__.py
pyangus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyangus/client/: client.py
pyangus/exceptions/: client_exception.py  ingest_exception.py  rpa_exception.py
pyangus/rpa/: rpa.py
